# taskmanager

./: Cargo.toml  build.rs  resources.rc
src/: main.rs  process.rs  resources.rs  run_dialog.rs  state.rs  status_bar.rs  system.rs  task_list.rs  window.rs
