[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
widestring = "1.1.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_System_SystemInformation",
    "Win32_Globalization"
]

[build-dependencies]
winres = "0.1"