[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
widestring = "1.1.0"
human_bytes = "0.4"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_System_SystemInformation",
    "Win32_Globalization",
    "Win32_System_Performance"
]

[build-dependencies]
winres = "0.1"
